# LarcSecretaire

./: .gitignore  AGENTS.md  CONTEXT.md  __main__.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
common/: app_config.py  audit.py  auth.py  database.py  logger.py  mail.py  network.py  photos.py  session.py  sqlite_init.py  sync.py  theme.py
docs/: 01_specifications.md  02_authentification.md  03_sync.md  CHANGEMENTS_INTRANET.md  app_config.sql  foyer_parent.sql  historique_construction.md  migrate_notes_column.sql  migrate_notes_json.sql  parent_gabarit.sql  processus_enregistrement.md  rapport_audit_2026-06-12.md  student_event.sql  student_parent.sql  student_photos_bucket.sql
scripts/: upload_photos.py
sql/: 01_audit_trail.sql  02_date_columns.sql
views/: dossier_panel.py  login.py  main_window.py  notes_panel.py  parent_manager.py  password.py  student_form.py  supervisor_panel.py
