[project]
name = "larcsecretaire"
version = "1.0.0"
description = "Application de secrétariat — gestion des élèves, parents, inscriptions"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.5",
    "psycopg2-binary>=2.9",
    "materialyoucolor>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-qt>=4",
    "ruff>=0.15",
    "black>=26",
    "pre-commit>=4",
]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E741", "E701", "E702", "F841"]  # pre-existing

[tool.black]
line-length = 160
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
